ajout des module npm

--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
     "url": "https://github.com/vuilletg/pharmacieSIO/issues"
   },
   "homepage": "https://github.com/vuilletg/pharmacieSIO#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "iniparser": "^1.0.5",
+    "mysql2": "^3.11.5"
+  }
 }
