get +push des client

--- a/DB.ini
+++ b/DB.ini
@@ -1,6 +1,6 @@
 [dev]
 host = localhost
-user = adm123
-password =user
-database = pharmacieeval
-port = 3308
+user = root
+password =
+database = pharmacie
+port = 3306
