--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
     "iniparser": "^1.0.5",
-    "mysql2": "^3.11.5",
+    "mysql2": "^3.12.0",
+    "mysql2-promise": "^0.1.4",
     "nodemon": "^3.1.9"
   }
 }
